bugfix: patch to avoid Reverse Tabnabbing

--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
                     <p>Suite à un premier poste de développeur fullstack Java, je suis à la recherche d'un nouveau challenge</p>
                 </article>
                 <ul>
-                    <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
-                    <!-- <li class="btn"><a href="http://">Dossier de compétences</a></li> -->
-                    <li><a href="img/CDA_HB.pdf" target="_blank" class="btn">Formation</a></li>
+                    <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank rel="noopener" rel="noopener"" class="btn">CV</a></li>
+                    <li><a href="img/CDA_HB.pdf" target="_blank rel="noopener"" class="btn">Formation</a></li>
                     <li><a href="" class="btn btnImportant button_mail">Contactez moi</a></li>
                 </ul>
             </div>
@@ -361,8 +360,8 @@
                         - Apprendre de nouvelles technologies pour moi. <br>
                     </p>
                     <ul>
-                        <li class="btn"><a href="http://cheatsheets.benjaminpetel.fr" target="_blank"><img src="./img/cheatCheets.webp"></a></li>
-                        <li class="btn"><a href="https://github.com/Benjamin-PETEL/CheatSheets" target="_blank"><img src="./img/github_dark.svg" alt=""></a></li>
+                        <li class="btn"><a href="http://cheatsheets.benjaminpetel.fr" target="_blank rel="noopener""><img src="./img/cheatCheets.webp"></a></li>
+                        <li class="btn"><a href="https://github.com/Benjamin-PETEL/CheatSheets" target="_blank rel="noopener""><img src="./img/github_dark.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -380,8 +379,8 @@
                         Le projet et en production sur un Raspberry Pi.
                     </p>
                     <ul>
-                        <li><a class="btn" href="http://dogsymfony.benjaminpetel.fr" target="_blank"><img src="./img/SayWoof.webp" alt=""></a></li>
-                        <li><a class="btn" href="https://github.com/JonathanPothin/dog-symfony" target="_blank"><img src="./img/github_dark.svg" alt=""></a></li>
+                        <li><a class="btn" href="http://dogsymfony.benjaminpetel.fr" target="_blank rel="noopener""><img src="./img/SayWoof.webp" alt=""></a></li>
+                        <li><a class="btn" href="https://github.com/JonathanPothin/dog-symfony" target="_blank rel="noopener""><img src="./img/github_dark.svg" alt=""></a></li>
                     </ul>
                 </div>
 
@@ -434,8 +433,8 @@
     <footer>
         <ul>
             <li><a href="" class="button_mail"><img src="img/email.svg"></a></li>
-            <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
-            <li><a href="https://github.com/Benjamin-PETEL" target="_blank"><img src="img/github_light.svg"></a></li>
+            <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank rel="noopener""><img src="img/linkedin.svg"></a></li>
+            <li><a href="https://github.com/Benjamin-PETEL" target="_blank rel="noopener""><img src="img/github_light.svg"></a></li>
         </ul>
     </footer>
 
